# perf-event-test

./: Cargo.toml  README.md
perf-event-test/: Cargo.toml
perf-event-test-common/: Cargo.toml
perf-event-test-common/src/: lib.rs
perf-event-test-ebpf/: Cargo.toml
perf-event-test-ebpf/src/: main.rs
perf-event-test/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
