[package]
name = "perf-event-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
perf-event-test-common = { path = "../perf-event-test-common", features = ["user"] }
anyhow = "1.0.68"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time"] }
bytes = "1.0.1"
num_cpus = "1.15.0"

[[bin]]
name = "perf-event-test"
path = "src/main.rs"
